still are some weird bugs but idk why its happening

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,11 +22,13 @@
             "args": [
                 "run",
                 "-i",
-                "scratch.claw"
+                "scratch.claw",
+                "-F",
+                "resources"
             ],
             // "args": [
             //     "dev",
-            //     "check",
+            //     "parse",
             //     "-i",
             //     ".\\lib\\std\\std.claw"
             // ],
