--- a/deno.json
+++ b/deno.json
@@ -5,11 +5,15 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "@std/path": "jsr:@std/path@^1.0.8",
-    "jsmediatags": "npm:jsmediatags@^3.9.7"
+    "jsmediatags": "npm:jsmediatags@^3.9.7",
   },
   "compilerOptions": {
     "lib": [
       "deno.window"
     ]
-  }
+  },
+  "exports": "./mod.ts",
+  "name": "@silky/claw",
+  "version": "0.1.0",
+  "license": "MIT"
 }
