--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "@std/path": "jsr:@std/path@^1.0.8",
-    "jsmediatags": "npm:jsmediatags@^3.9.7"
+    "jsmediatags": "npm:jsmediatags@^3.9.7",
+    "mathjs": "npm:mathjs@14.3.0"
   },
   "compilerOptions": {
     "lib": [
@@ -14,6 +15,6 @@
   },
   "exports": "./mod.ts",
   "name": "@silky/claw",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "license": "MIT"
 }
